--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       font-size: 1.2rem;
       font-weight: bold;
     }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: rgba(0,0,0,0.3); /* optional: slightly dark overlay for better contrast */
-      padding: 40px;
+       .container {
+      width: 400px;
+      height: 400px;
       border-radius: 20px;
+      background: url("https://i.ibb.co/tPLmFqh4/sq9j2t.png") center/cover no-repeat;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+      border: 4px solid rgba(255, 255, 255, 0.3);
+    }
     }
   </style>
 </head>
