--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #008000; /* အစိမ်း background */
+      background: #000;
       color: #fff;
-      display: flex;
-      justify-content: center; /* horizontally center */
-      align-items: center;    /* vertically center */
-      height: 100vh;          /* viewport height အားလုံး */
       text-align: center;
-      margin: 0;
+      padding: 50px;
     }
     h1 {
       color: #FFD700;
@@ -43,52 +39,22 @@
       font-size: 1.2rem;
       font-weight: bold;
     }
-       .container {
-      width: 400px;
-      height: 400px;
-      border-radius: 20px;
-      background: url("https://i.ibb.co/tPLmFqh4/sq9j2t.png") center/cover no-repeat;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
-      border: 4px solid rgba(255, 255, 255, 0.3);
-    }
-    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>123APE Mint Checker 🦍</h1>
-    <p>Enter your wallet address to see if you can mint 🚀</p>
+  <h1>123APE Mint Checker 🦍</h1>
+  <p>Enter your wallet address to see if you won GTD or FCFS mint 🚀</p>
 
-    <input type="text" id="walletInput" placeholder="0xYourWalletAddress" />
-    <br>
-    <button onclick="check()">Check Eligibility</button>
+  <input type="text" id="walletInput" placeholder="0xYourWalletAddress" />
+  <br>
+  <button onclick="check()">Check Eligibility</button>
 
-    <div class="result" id="result"></div>
-  </div>
+  <div class="result" id="result"></div>
+
+  <!-- 🧩 External JS file link -->
+  <script src="whitelist.js"></script>
 
   <script>
-    // 🧾 Whitelisted addresses (sample)
-    const whitelist = [
-      "0x5c8205ed4a993d7b3819106298076cd00466f18d",
-      "0x8c2a4718b47679bf8579a2c1b2d5c82f8d4b9cd5",
-      "0xbac0ea587ceb4de74930d3e4249e22ed85794323",
-      "0x51c7561BA63A541D90c557e7AceF3caB10c26856",
-      "0xfBCF3671003B772270311eCFA21be2c42E9D1a41",
-      "0xAC6603502f9866cfc0f024897D775e7A20A9D849",
-      "0xcc98365fc6b8ab4bc63260c5d20a157a4e24b959",
-      "0xBDA49E5D3EBda7158071687161411193DB325eD3",
-      "0xB9AbF6b6D3fB923Fb60a505a07291960baee16E3",
-      "0x41beda5e53b607738c85508af2d42dfccd815614",
-      "0x7Be4aFc9c922Bef2cC8964EAc8D9C5F0fb134530",
-      "0x45AE544d05FFee72d262c5ec1B1c62BF01525216",
-      "0x6c71371007d8e713d3f7ca319f0c318b4e30d6c5",
-      "0xA54071ECD1f34F56f6ab4b1E80DA9257832239B9",
-      "0x76474c16da4f5f8b23006512a696d1db6c314475",
-      "0xa101403313b0cb4054331d1ffac7341591ffcd51",
-      "0x560cc4874fbb4efdcea4ba83bb4bb92ea6f026e",
-      "0x0Ab5EeFC0873171C7FAc6E46000D1A59210A8e76"
-    ];
-
     function check() {
       const input = document.getElementById("walletInput").value.trim().toLowerCase();
       const result = document.getElementById("result");
@@ -99,11 +65,14 @@
         return;
       }
 
-      if (whitelist.includes(input)) {
-        result.innerHTML = "✅ Eligible! You can mint 🚀";
+      if (gtdWhitelist.includes(input)) {
+        result.innerHTML = "✅ You won <b>GTD Mint</b> 🎉";
         result.style.color = "#00ff99";
+      } else if (fcfsWhitelist.includes(input)) {
+        result.innerHTML = "🚀 You won <b>FCFS Mint</b> 🔥";
+        result.style.color = "#1E90FF";
       } else {
-        result.innerHTML = "❌ Not eligible for mint.";
+        result.innerHTML = "❌ Sorry, not eligible for mint.";
         result.style.color = "#ff5555";
       }
     }
